# nwbview

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: display_traits.rs  gui.rs  hdf.rs  main.rs  plot.rs  popup.rs  table.rs
tests/: test_hdf.rs
