[package]
authors = ["Anıl Tuncel <aniltuncel@protonmail.com>"]
categories = ["science", "visualization", "science::neuroscience"]
description = "Neurodata Without Borders viewer"
name = "nwbview"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/brainhack-ch/nwbview"
license = "Apache-2.0"
readme = "README.md"
keywords = ["neuroscience", "viewer", "visualization", "NWB"]

include = [
  "Cargo.lock",
  "Cargo.toml",
  "LICENSE",
  "src/**/*",
]

[[bin]]
name = "nwbview"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.0"
rfd = "0.10"
hdf5 = "0.8.1"
serde = "1"
egui_extras = "0.20.0"
image = "0.24.5"
